--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
+    "motion": "^12.10.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.3",
