--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "chance": "^1.1.12",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
     "motion": "^12.10.5",
